# docufetch

./: .gitignore  README.md  pyproject.toml
docufetch/: __init__.py  chunker.py  cli.py  crawler.py  parser.py  store.py
tests/: test_chunker.py
